--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <header class="header">  <!--changed div to section-->
+    <header class="header">  <!--changed div to header-->
          <h1>Horiseon</h1>   <!--<span class="seo">seo</span>n</h1>-->
         <nav>                <!--changed from div to nav-->
             <ul>
@@ -29,7 +29,7 @@
     <div class="hero"></div>
 
     <main class="content">  <!--changed div to main-->
-        <article id="search-engine-optimization" class="search-engine-optimization">    <!--left out id before-->
+        <article id="search-engine-optimization" class="search-engine-optimization">    <!--the id was left out and changed div to article-->
             <img src="assets/images/search-engine-optimization.jpg" class="float-left" alt="search engine optmization"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -37,7 +37,7 @@
             </p>
         </article>
 
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="online-reputation-management">  <!--changed div to article-->
             <img src="assets/images/online-reputation-management.jpg" class="float-right" alt="online reputation management"/>  <!--left out alt-->
             <h2>Online Reputation Management</h2>
             <p>
@@ -45,7 +45,7 @@
             </p>
         </article>
 
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="social-media-marketing">   <!--changed div to article-->
             <img src="assets/images/social-media-marketing.jpg" class="float-left" alt="social media marketing"/>  <!--left out alt-->
             <h2>Social Media Marketing</h2>
             <p>
@@ -55,7 +55,7 @@
     </main>
 
     <aside class="benefits">  <!--changed div to aside-->
-        <article class="benefit-lead">
+        <article class="benefit-lead">  <!--changed div to article-->
             <h3>Lead Generation</h3>
             <img src="assets/images/lead-generation.png"></img>  <!--left out closing tag-->
             <p>
@@ -63,7 +63,7 @@
             </p>
         </article>
 
-        <article class="benefit-brand">
+        <article class="benefit-brand"> <!--changed div to article-->
             <h3>Brand Awareness</h3>
             <img src="assets/images/brand-awareness.png"></img>  <!--left out closing tag-->
             <p>
@@ -71,7 +71,7 @@
             </p>
         </article>
 
-        <article class="benefit-cost">
+        <article class="benefit-cost">  <!--changed div to article-->
             <h3>Cost Management</h3>
             <img src="assets/images/cost-management.png"></img>
             <p>
