--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="header">  <!--changed div to header-->
-         <h1>Horiseon</h1>   <!--<span class="seo">seo</span>n</h1>-->
+        <h1>Hori<span class="seo">seo</span>n</h1>    
         <nav>                <!--changed from div to nav-->
             <ul>
                 <li>
@@ -28,7 +28,7 @@
 
     <div class="hero"></div>
 
-    <main class="content">  <!--changed div to main-->
+    <section class="content">  <!--changed div to section-->
         <article id="search-engine-optimization" class="search-engine-optimization">    <!--the id was left out and changed div to article-->
             <img src="assets/images/search-engine-optimization.jpg" class="float-left" alt="search engine optmization"/>
             <h2>Search Engine Optimization</h2>
@@ -52,7 +52,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-    </main>
+    </section>
 
     <aside class="benefits">  <!--changed div to aside-->
         <article class="benefit-lead">  <!--changed div to article-->
