--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <aside class="benefits">  <!--changed div to aside-->
         <article class="benefit-lead">  <!--changed div to article-->
             <h3>Lead Generation</h3>
-            <img src="assets/images/lead-generation.png"></img>  <!--left out closing tag-->
+            <img src="assets/images/lead-generation.png" alt="lead-generation" />  <!--left out closing tag-->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -65,7 +65,7 @@
 
         <article class="benefit-brand"> <!--changed div to article-->
             <h3>Brand Awareness</h3>
-            <img src="assets/images/brand-awareness.png"></img>  <!--left out closing tag-->
+            <img src="assets/images/brand-awareness.png" alt="brand-awareness" />  <!--left out closing tag-->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -73,7 +73,7 @@
 
         <article class="benefit-cost">  <!--changed div to article-->
             <h3>Cost Management</h3>
-            <img src="assets/images/cost-management.png"></img>
+            <img src="assets/images/cost-management.png" alt="cost-management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
